2010-08-09  Andre Heinecke <aheinecke@intevation.de>

	* CMakelists.txt: Disable some Microsoft-CRT deprecation warnings
	* CMakelists.txt: Only link with Qt-GUI and Qt-Core
	* assuan-buffer.c, assuan-listen.c, assuan.h, pinentry.c, pinentry.h,
	  pinentrydialog.cpp, secmem-util.c, secmem-util.h, secmem.c: Change
	  includes and definitions to enable building for Windows NT with MSVC


2010-06-28  Werner Koch  <wk@g10code.com>

	* pinentrydialog.cpp (PinEntryDialog): Disable echo.

2010-06-25  Werner Koch  <wk@g10code.com>

	Initial release 0.5.0.

	* CMakeLists.txt: Set version to 0.5.0.

2010-06-25  Andre Heinecke  <aheinecke@intevation.de>

	* main.cpp (parse_std_file_handles): Add a cast to integer for the fds.
	(main): Add a cast to integer to the fileno call.

2010-06-24  Werner Koch  <wk@g10code.com>

	* pinentry.c (pinentry_set_std_fd): Assign VAL and not NO.

2010-06-23  Werner Koch  <wk@g10code.com>

	* main.cpp (main): Setup default file handles via fileno.

2010-06-22  Werner Koch  <wk@g10code.com>

	* secmem.c (lock_pool) [W32CE]: Do not print the no secmem warning.

	* pinentry.c (pinentry_loop): Pass the correct fd.

2010-06-21  Andre Heinecke <aheinecke@intevation.de>

	* main.cpp [W32CE]: Include winbase.h

2010-06-21  Werner Koch  <wk@g10code.com>

	* pinentrydialog.cpp: Use #if and not #ifdef along with defined.

	* main.cpp [W32CE]: Include winioctl.h.
	(w32ce_finish_pipe, parse_std_file_handles) [W32CE]: New.
	(main) [W32CE]: Call new function.
	* pinentry.c (my_stdin_fd, my_stdout_fd): New.
	(pinentry_loop): Use them.
	(pinentry_set_std_fd): New.

2010-05-21  Marcus Brinkmann  <marcus@g10code.de>

	* Initial release, based on pinentry SVN 2010-05-21.

