@@ -140,8 +140,8 @@ PinEntryDialog::PinEntryDialog( QWidget* parent, const char* name, bool modal,
  
   connect( buttons, SIGNAL(accepted()), this, SLOT(accept()) );
   connect( buttons, SIGNAL(rejected()), this, SLOT(reject()) );
-  connect( _edit, SIGNAL( textChanged(secqstring) ),
-           this, SLOT( updateQuality(secqstring) ) );
+  connect( _edit, SIGNAL( textChanged(const QString &) ),
+           this, SLOT( updateQuality(const QString &) ) );
 
   _edit->setFocus();
 
