@@ -1,3 +1,12 @@
+2010-08-12  Andre Heinecke  <aheinecke@intevation.de>
+
+	* pinentrydialog.cpp (PinEntryDialog): Connect signal with standard type
+	* pinentrydialog.cpp (updateQuality): use const QString & to avoid connect
+	  problems.
+	* pinentrydialog.h (PinEntryDialog): Change declaration of updateQuality
+	  slot
+	* pinentrydialog.moc: Update to reflect signal changes
+
 2010-08-09  Andre Heinecke <aheinecke@intevation.de>
 
 	* CMakelists.txt: Disable some Microsoft-CRT deprecation warnings
